--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>jersey-client</artifactId>
             <version>2.25.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.3</version>
+        </dependency>
     </dependencies>
 
     <build>
